I think the UI is fine for now.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
                     addressForm.submit();
                 }
             });
+            addressInput.val("2212 Lake Shore Boulevard West, Toronto, Ontario, Canada");
+            addressForm.submit();
         });
     </script>
 </head>
