Updated resource locations and README.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet" />
-    <link rel="icon" href="/img/favicon.png">
+    <link rel="icon" href="img/favicon.png">
     <!-- Page Specific CSS -->
     <style type="text/css">
         .loginInput {
@@ -81,7 +81,7 @@
     <!-- Script Files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/places.js@1.7.3"></script>
-    <script src="/js/jig.js"></script>
+    <script src="js/jig.js"></script>
     <script>
         $(function () {
             addressForm = $("#address-form");
@@ -143,7 +143,7 @@
             <div class="panel">
                 <div class="panel-body">
                     <div class="text-center">
-                        <img class="img-circle" src="/img/insta.jpg" alt="Supreme Simplified Logo" width="120" height="120" />
+                        <img class="img-circle" src="img/insta.jpg" alt="Supreme Simplified Logo" width="120" height="120" />
                     </div>
                     <h2 class="text-center">Address Jig Tool</h2>
                     <form id="address-form" class="validate-form">
